--- a/html/landing.html
+++ b/html/landing.html
@@ -29,11 +29,11 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Dropdown 1</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Dropdown 2</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Dropdown 3</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Dropdown 4</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Dropdown 5</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Overview</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Bio-Plastics</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Bio-Diesel</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Bio-Constructional Materials</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><i class="bx bx-server"></i> <span>LIfe-Misssion</span></a></li>
           <li><a href="#" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Dropdown 6</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
