--- a/html/landing.html
+++ b/html/landing.html
@@ -23,7 +23,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/Logo.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="landing.html">Bio Atomic Squad</a></h1>
       </div>
 
