Added first two ones

--- a/html/landing.html
+++ b/html/landing.html
@@ -19,25 +19,166 @@
 <body>
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   
+  <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/Logo.png" alt="" class="img-fluid rounded-circle">
+        <img src="../assets/logo-cut.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="landing.html">Bio Atomic Squad</a></h1>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Overview</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Bio-Plastics</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Bio-Diesel</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Bio-Constructional Materials</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-server"></i> <span>LIfe-Misssion</span></a></li>
-          <li><a href="#" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Dropdown 6</span></a></li>
+          <li><a href="#Overview" class="nav-link scrollto"><span class="fs-4 text-wrap fw-bolder">Overview</span></a></li>
+          <li><a href="#Bio-Plastics" class="nav-link scrollto"><span class="fs-4 text-wrap fw-bolder">Bio-Plastics</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><span class="fs-4 text-wrap fw-bolder">Bio-Diesel</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><span class="fs-4 text-wrap fw-bolder">Bio-Constructional Materials</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><span class="fs-4 text-wrap fw-bolder">Products</span></a></li>
+          <li><a href="#" class="nav-link scrollto"><span class="fs-4 text-wrap fw-bolder">LiFe Mission</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
   </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Our Innovations</h1>
+      <p>Are <span class="typed" data-typed-items="Bio-Plastics, Bio-Plastics, Bio-Constructional Materials"></span></p>
+    </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= Overview Section ======= -->
+    <section id="Overview" class="portfolio section-bg">
+
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Overview</h2>
+          <p class="fs-4 fw-bold">
+            Rather than focusing solely on protecting the natural environment, we should strive to create a world where the environment doesn't need protection. Biotechnology is seen as a potential solution to achieving this goal. The proposed prototype includes three sub-topics: bioplastics, biofuel from algae, and bio constructional raw materials.
+          </p>
+          <br>
+          <p class="fs-4">
+            <span class="fw-bolder text-decoration-underline">Bioplastics</span> are a type of plastic made from renewable resources such as corn starch, sugarcane, and potato starch, rather than non-renewable resources like petroleum. Bioplastics can be composted, which reduces the environmental impact of plastic waste. They also have the potential to reduce greenhouse gas emissions because they are made from renewable resources.
+          </p>
+          <br>
+          <p class="fs-4">
+            <span class="fw-bolder text-decoration-underline">Biofuel from algae:</span> Biofuels are renewable fuels made from living organisms. Algae can be used to produce biofuels because they grow quickly and can be cultivated in large quantities. Algae biofuels have the potential to reduce greenhouse gas emissions and dependence on non-renewable fossil fuels.
+          </p>
+          <br>
+          <p class="fs-4">
+            <span class="fw-bolder text-decoration-underline">Bio constructional raw materials:</span> Construction materials made from renewable resources such as bamboo, straw, and hemp are considered bio constructional raw materials. These materials have the potential to reduce the environmental impact of construction by using renewable resources and reducing waste.
+          </p>
+          <br>
+          <p class="fs-4 fw-bold">
+            Overall, the proposed prototype suggests that biotechnology can be used to create sustainable solutions in various sectors, including plastics, energy, and construction. However, it is important to note that while biotechnology can offer benefits, it is not a panacea and should be used alongside other sustainable practices to create a truly sustainable world.
+          </p>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Overview Section -->
+
+    <!-- ======= Bio-Plastics Section ======= -->
+    <section id="Bio-Plastics" class="portfolio section-bg">
+
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Bio-Plastics</h2>
+          <p class="fs-4 fw-bold">
+            Bioplastics are a type of plastic that is made from renewable, bio-based resources such as corn starch, agar, glycerin, cassava starch, and potato starch. Unlike traditional plastics, which are derived from non-renewable fossil fuels, bioplastics are made from natural resources and can be biodegraded, composted, or recycled, reducing their environmental impact. Bioplastics are an eco-friendly alternative to traditional plastics, which take centuries to degrade and can harm the environment by polluting waterways and harming wildlife.
+          </p>
+          <br>
+          <p class="fs-4 fw-bold">
+            The use of bioplastics in various applications has several advantages. For one, they can be used to replace traditional plastics in a wide range of applications, from packaging materials to single-use utensils, reducing our dependence on non-renewable fossil fuels. Bioplastics can be engineered to have a range of physical and chemical properties, making them suitable for various applications.
+          </p>
+          <br>
+          <p class="fs-4">
+            Corn starch, for example, can be used to produce a type of bioplastic called polylactic acid (PLA), which is commonly used in packaging and disposable products. Glycerin can be used to produce a type of bioplastic called polyhydroxyalkanoates (PHA), which can be used in medical implants and other applications.
+          </p>
+          <br>
+          <p class="fs-4">
+            Cassava starch, which is abundant in tropical regions, can be used to produce bioplastics that are highly durable and water-resistant, making them suitable for use in food packaging and other applications where water resistance is important.
+          </p>
+          <br>
+          <p class="fs-4 fw-bold">
+            Another advantage of bioplastics is that they can be biodegraded, composted, or recycled, reducing their impact on the environment. Biodegradable bioplastics, for example, can be broken down by microorganisms into natural compounds such as carbon dioxide, water, and organic matter, reducing their impact on the environment. Compostable bioplastics, on the other hand, can be composted along with food waste, reducing the amount of waste sent to landfills.
+          </p>
+          <br>
+          <p class="fs-4 fw-bold">
+            In conclusion, bioplastics are a promising alternative to traditional plastics, offering several advantages such as being made from renewable resources, having a range of physical and chemical properties, and being biodegradable, compostable, or recyclable. While bioplastics are not a panacea, they have the potential to reduce our dependence on non-renewable fossil fuels and contribute to a more sustainable future.
+          </p>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="../assets/bio-plastic1.jpeg" class="img-fluid" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="../assets/bio-plastic2.jpeg" class="img-fluid" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="../assets/bio-plastic3.jpeg" class="img-fluid" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="../assets/bio-plastic4.jpeg" class="img-fluid" alt="">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Bio-Plastics Section -->
+
+
+  </main><!-- End #main -->
+
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>SathvikHegde</span></strong>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/typed.js/typed.min.js"></script>
+  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="../js/landing.js"></script>
 </body>
 </html>
