--- a/html/loading.html
+++ b/html/loading.html
@@ -3,14 +3,15 @@
     <link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/loading.css">
     <link href='https://fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet' type='text/css'>
+    <title>Loading...</title>
     <meta http-equiv = "refresh" content = "5; url = landing.html" />
   </head>
-  <body class="bg-dark">
+  <body>
     <div class="h-100 d-flex align-items-center justify-content-center">
       <main class="px-3">
         <p class="h1 text-center text-light fw-bolder text-decoration-underline">BIO-TECHNOLOGY</p>
         <!--<div class="dot-flashing"></div>--> 
-        <img src="../assets/output-onjcry-4--unscreen.gif">
+        <img src="../assets/engine.gif">
       </main>
     </div>
   </body>
